# oci-mcp-gateway

./: .gitignore  Dockerfile  pyproject.toml  rlm_deployment_pipeline_report.md
config/: gateway.dev.json  gateway.json
deploy/kubernetes/: namespace.yaml
deploy/kubernetes/backends/db-observatory/: deployment.yaml  service.yaml
deploy/kubernetes/backends/finops/: deployment.yaml  service.yaml
deploy/kubernetes/backends/logan/: deployment.yaml  service.yaml
deploy/kubernetes/backends/mcp-oci/: deployment.yaml  service.yaml
deploy/kubernetes/backends/security/: deployment.yaml  service.yaml
deploy/kubernetes/gateway/: configmap.yaml  deployment.yaml  hpa.yaml  secrets.yaml  service.yaml
deploy/kubernetes/shared/: networkpolicy.yaml  rbac.yaml  serviceaccount.yaml
deploy/scripts/: build-all.sh  deploy.sh  setup-idcs-app.sh
deploy/terraform/: api_gateway_route.tf  iam.tf
dockerfiles/: Dockerfile.db-observatory  Dockerfile.finops  Dockerfile.logan  Dockerfile.mcp-oci
src/oci_mcp_gateway/: __init__.py  __main__.py  health.py  observability.py
